[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/JobMaker/JobEditorTree/JobEditorTree.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/JobMaker/job_maker.gd" type="Script" id=2]

[node name="JobMaker" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="JobEditorTree" parent="." instance=ExtResource( 1 )]
anchor_bottom = 0.831667
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_top = 0.833333
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 93.0002
alignment = 1

[node name="Cancel" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 373.0
margin_right = 427.0
margin_bottom = 86.0
text = "Cancel"

[node name="JobTypeName" type="LineEdit" parent="PanelContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 489.0
margin_bottom = 86.0

[node name="Apply" type="Button" parent="PanelContainer/HBoxContainer"]
margin_left = 493.0
margin_right = 637.0
margin_bottom = 86.0
text = "Create/Save Changes"

[connection signal="pressed" from="PanelContainer/HBoxContainer/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/Apply" to="." method="_on_Apply_pressed"]
